--- a/client/index.html
+++ b/client/index.html
@@ -9,15 +9,10 @@
 		content="A community platform for sharing pussy videos. Purring kittens in your area. Join now." />
 	<meta property="og:title" content="Pussy videos. Livestreams (Hopefully)." />
 	<meta property="og:site_name" content="PussyHub" />
-	<meta property="og:image" content="/cat.svg" />
 	<title>PussyHub</title>
-	<script type="module">
-		import init from "/app.js";
-		init(new URL('app_bg.wasm', import.meta.url));
-	</script>
-	<link rel="icon" href="/favicon.svg">
-	<link rel="stylesheet" href="/blueprint.css">
-	<link rel="stylesheet" href="/ph-theme.css">
+	<link data-trunk rel="css" href="/src/static/blueprint.css">
+	<link data-trunk rel="css" href="/src/static/ph-theme.css">
+	<link data-trunk rel="copy-file" href="/src/static/cat.svg"/>
 	<style>
 		body {
 			margin: 0;
@@ -122,7 +117,5 @@
 		}
 	</style>
 </head>
-
-<body></body>
 
 </html>
