working hls stream example

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,8 @@
 	<meta property="og:title" content="Pussy videos. Livestreams (Hopefully)." />
 	<meta property="og:site_name" content="PussyHub" />
 	<title>PussyHub</title>
+	<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+	<script src="https://cdn.jsdelivr.net/npm/dplayer@1.26.0/dist/DPlayer.min.js"></script>
 	<link data-trunk rel="css" href="/src/static/blueprint.css">
 	<link data-trunk rel="css" href="/src/static/ph-theme.css">
 	<link data-trunk rel="copy-file" href="/src/static/cat.svg"/>
