--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<meta name="description"
 		content="A community platform for sharing pussy videos. Purring kittens in your area. Join now." />
 	<meta property="og:description"
@@ -12,112 +13,10 @@
 	<title>PussyHub</title>
 	<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 	<script src="https://cdn.jsdelivr.net/npm/dplayer@1.26.0/dist/DPlayer.min.js"></script>
-	<link data-trunk rel="css" href="/src/static/blueprint.css">
-	<link data-trunk rel="css" href="/src/static/ph-theme.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+<!--	<link data-trunk rel="css" href="/src/static/ph-theme.css">-->
 	<link data-trunk rel="copy-file" href="/src/static/cat.svg"/>
-	<style>
-		body {
-			margin: 0;
-			padding: 0;
-		}
-
-		.ph-logo {
-			max-width: 120px;
-			margin-right: 23px;
-		}
-
-		.ph-heading {
-			font-size: 20px;
-			font-weight: 600;
-		}
-
-		.bp3-tree {
-			width: 350px;
-		}
-
-		.ph-nav .ph-nav-sponsors {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			padding: 15px;
-		}
-
-		.ph-nav .bp3-menu {
-			background-color: transparent;
-		}
-
-		.ph-nav .bp3-menu-item:hover {
-			background-color: transparent;
-			font-weight: 600;
-		}
-
-		.ph-example-wrapper .bp3-code-block {
-			white-space: pre-wrap;
-		}
-
-		.ph-example-wrapper .bp3-code-block pre {
-			margin: 0;
-			white-space: pre-wrap;
-		}
-
-		.ph-example {
-			border-radius: 6px;
-			background-color: #fff;
-			padding: 20px;
-		}
-
-		.bp3-dark .ph-example {
-			background-color: #293742;
-		}
-
-		.ph-source>.bp3-button {
-			background-color: #ebf1f5;
-		}
-
-		.bp3-dark .ph-source>.bp3-button {
-			background-color: #394b59;
-		}
-
-		.ph-source {
-			margin-bottom: 40px;
-			margin-top: 10px;
-		}
-
-		.ph-source .bp3-code-block {
-			filter: invert(1) hue-rotate(180deg) contrast(2);
-			background-color: #002b36;
-		}
-
-		.bp3-dark .ph-source .bp3-code-block {
-			filter: inherit;
-		}
-
-		.bp3-slider-handle:focus {
-			outline: none !important;
-		}
-
-		.ph-panel-stack-example {
-			box-shadow: 0 0 0 1px rgba(16,22,26,.15),0 0 0 rgba(16,22,26,0),0 0 0 rgba(16,22,26,0);
-			height: 240px;
-			width: 300px;
-		}
-
-		.ph-panel-stack-contents-example {
-			align-items: center;
-			display: flex;
-			flex: 1 0 auto;
-			flex-direction: column;
-			justify-content: space-around;
-			padding: 10px;
-			row-gap: 10px;
-		}
-
-		.custom-icon > svg {
-			width: 16px;
-			height: 16px;
-			padding-top: 2px;
-		}
-	</style>
 </head>
 
 </html>
