fill page with main content

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,16 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 <!--	<link data-trunk rel="css" href="/src/static/ph-theme.css">-->
 	<link data-trunk rel="copy-file" href="/src/static/cat.svg"/>
+	<style>
+		html, body {
+			height: 100%;
+		}
+
+		body {
+			display: flex;
+			flex-direction: column;
+		}
+	</style>
 </head>
 
 </html>
