--- a/client/index.html
+++ b/client/index.html
@@ -11,11 +11,11 @@
 	<meta property="og:title" content="Pussy videos. Livestreams (Hopefully)." />
 	<meta property="og:site_name" content="PussyHub" />
 	<title>PussyHub</title>
-	<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-	<script src="https://cdn.jsdelivr.net/npm/dplayer@1.26.0/dist/DPlayer.min.js"></script>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"/>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.18.0/video.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.18.0/video-js.min.css" />
+	<link data-trunk rel="css" type="text/css" href="/src/static/vjs-theme-ph.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"  />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
-<!--	<link data-trunk rel="css" href="/src/static/ph-theme.css">-->
 	<link data-trunk rel="copy-file" href="/src/static/cat.svg"/>
 	<style>
 		html, body {
