feat: video quality selector

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,8 @@
 	<meta property="og:site_name" content="PussyHub" />
 	<title>PussyHub</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.18.0/video.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-quality-levels/2.1.0/videojs-contrib-quality-levels.min.js"></script>
+	<script src="https://www.unpkg.com/videojs-hls-quality-selector@1.1.4/dist/videojs-hls-quality-selector.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.18.0/video-js.min.css" />
 	<link data-trunk rel="css" type="text/css" href="/src/static/vjs-theme-ph.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"  />
