--- a/client/index.html
+++ b/client/index.html
@@ -23,10 +23,12 @@
 		html, body {
 			height: 100%;
 		}
-
 		body {
 			display: flex;
 			flex-direction: column;
+		}
+		.ph-video-icons-container > span {
+			margin: 0.3em 0.5em;
 		}
 	</style>
 </head>
